# Gloss-Check

./: .gitattibutes  .gitignore  .pre-commit-config.yaml  Acronyms.txt  GEOG_Gloss.json  Glossary_Checker.wpr  README.md  args.py  doc2docx.py  docx2utils.py  enable_pre_commit.bat  enchant-sphinx.py  gc_gui.py  gloss_check.py  gloss_check.spec  gloss_utils.py  prep_release.py  pyproject.toml  requires.txt  setup_cx.py  text_utls.py  version_info.py  xmltree_utils.py
gloss_check/: __init__.py  __main__.py  args.py  docx2utils.py  enchant-sphinx.py  gc_gui.py  gloss_check.py  gloss_utils.py  prep_release.py  text_utls.py  version_info.py  xmltree_utils.py
